# perfect-pay-service

./: .env_example  README.md  create_tables.py  drop_tables.py  main.py  product.py  pyproject.toml  requirements.txt  test.sh
.github/workflows/: ci-workflow.yml
src/application/interfaces/repositories/: client.py  products.py  sales.py
src/application/usecases/client/: create_client.py  delete_client.py  get_all_client.py  get_client.py  update_client.py
src/application/usecases/dtos/: client.py  product.py  sales.py
src/application/usecases/products/: create_product.py  delete_product.py  get_all_products.py  get_product.py  update_product.py
src/application/usecases/sales/: create_sales.py  delete_sales.py  get_all_sales.py  get_sales.py  update_sales.py
src/controllers/: client.py  product.py  sales.py
src/domain/entities/: client.py  product.py  sales.py
src/infra/database/: mysql.py  postgres.py
src/infra/database/scripts/: product.py
src/infra/repositories/: client.py  product.py  sales.py
src/infra/web/: __init__.py
test/: compose.yaml
test/integration/client/: test_create_client.py  test_delete_client.py  test_find_all_client.py  test_find_one_client.py  test_update_client.py
test/integration/products/: test_create_product.py  test_delete_product.py  test_find_all_products.py  test_find_one_product.py  test_update_product.py
test/integration/sales/: test_create_sales.py  test_delete_sales.py  test_find_all_sales.py  test_find_one_sales.py  test_update_sales.py
test/unit/entities/: test_client.py  test_product.py  test_sales.py
(+19 files in other folders)
