[tool.poetry]
name = "perfect-pay-service"
version = "0.1.0"
description = ""
authors = ["SMarkus27 <pereira.markus.27@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.110"
psycopg = "3.1.18"
psycopg-binary = "3.1.18"
pytest = "8.1.1"
pytest-asyncio = "0.23.6"
python-decouple = "3.8"
uvicorn = "0.29"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
